--- a/_pages/research.html
+++ b/_pages/research.html
@@ -1,160 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
+---
+permalink: /research/
+author_profile: true
+redirect_from:
+- /research
+---
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            color: #333;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-        }
 
-        h1 {
-            font-size: 2em;
-            color: #000;
-        }
+{% include base_path %}
 
-        h2 {
-            font-size: 1.5em;
-            color: #000;
-            margin-top: 30px;
-        }
+<h1>Works in progress</h1>
+<p><a href="https://www.rwi-essen.de/fileadmin/user_upload/RWI/Publikationen/Ruhr_Economic_Papers/REP_24_1105.pdf"><strong>Gene-environment
+            interactions with essential heterogeneity</strong></a> (September 2024)<br>
+    with Hendrik Schmitz and Matthias Westphal<br>
+    <i>Ruhr Economic Papers</i> #1105
+</p>
 
-        h3 {
-            font-size: 1.3em;
-            color: #000;
-        }
+<p><strong>Life-cycle Health Effects of Compulsory Schooling</strong><br>
+    with Hendrik Schmitz and Beatrice Baaba Tawiah<br>
+    In preparation</p>
 
-        .paper {
-            margin-bottom: 20px;
-        }
+<h1>Published and accepted work</h1>
 
-        .paper-title {
-            font-weight: bold;
-        }
+<h2>Economics and general interest</h2>
+<p><strong>The impact of retirement on loneliness in Europe</strong><br>
+    with Sophie Guthmuller, Dörte Heger and Anna Werbeck<br>
+    <i>Scientific Reports</i>, forthcoming - <a
+        href="https://www.rwi-essen.de/fileadmin/user_upload/RWI/Publikationen/Ruhr_Economic_Papers/REP_23_1048.pdf">WP
+        version</a>
+</p>
 
-        .paper-info {
-            font-style: italic;
-            color: #666;
-        }
+<h2>Health policy</h2>
+<p><a href="https://www.sciencedirect.com/science/article/pii/S2211883724000674"><strong>A nationwide digital maturity
+            assessment of hospitals: Results from the German DigitalRadar</strong></a><br>
+    with Alexander Geissler, Malte Haring, Volker Amelung, Sylvia Thun and Alexander Haering<br>
+    <i>Health Policy and Technology</i>, 2024, Vol. 13(4)
+</p>
 
-        .abstract-toggle {
-            cursor: pointer;
-            color: #000;
-            font-weight: bold;
-        }
+<p><a href="https://www.sciencedirect.com/science/article/pii/S0168851024000228"><strong>The association of hospital
+            profitability and digital maturity – An explorative study using data from the German DigitalRadar
+            project</strong></a><br>
+    with Justus Vogel, Alexander Haering, Boris Augurzky and Alexander Geissler<br>
+    <i>Health Policy</i>, 2024, Vol. 142
+</p>
 
-        .abstract {
-            display: none;
-            background-color: #f9f9f9;
-            padding: 10px;
-            border-left: 3px solid #000;
-            margin-top: 10px;
-        }
-    </style>
-</head>
-
-<body>
-    <h1>Research</h1>
-
-    <h2>Works in progress</h2>
-
-    <div class="paper">
-        <p class="paper-title"><a
-                href="https://www.rwi-essen.de/fileadmin/user_upload/RWI/Publikationen/Ruhr_Economic_Papers/REP_24_1105.pdf">Gene-environment
-                interactions with essential heterogeneity</a> (September 2024)</p>
-        <p class="paper-info">with Hendrik Schmitz and Matthias Westphal</p>
-        <p><i>Ruhr Economic Papers</i> #1105</p>
-        <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
-        <div class="abstract">
-            [We show that two-stage least squares (2SLS) estimates of interactions can be misleading in settings with
-            essential heterogeneity (e.g., selection into gains) and where complier status to the instrument depends on
-            the interaction variable. The 2SLS estimator cannot disentangle interaction effects from shifts in complier
-            groups. Estimating marginal treatment effects addresses this problem by fixing the underlying population
-            and unobserved heterogeneity. We illustrate this using the example of gene-environment studies, where the
-            central parameter is the interaction effect between an endogenous, instrumented measure of environment
-            or behavior and a predetermined measure of genetic endowment. Our application examines the effect of
-            education on cognitive performance in old age. The results show complementarities between education and
-            genetic predisposition in determining cognitive abilities. The marginal treatment effect estimates reveal a
-            substantially larger gene-environment interaction, exceeding the 2SLS estimate by a factor of at least 2.5.]
-        </div>
-    </div>
-
-    <div class="paper">
-        <p class="paper-title">Life-cycle Health Effects of Compulsory Schooling</p>
-        <p class="paper-info">with Hendrik Schmitz and Beatrice Baaba Tawiah</p>
-        <p>In preparation</p>
-        <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
-        <div class="abstract">
-            [Abstract text goes here. Please add the abstract if available.]
-        </div>
-    </div>
-
-    <h2>Published and accepted work</h2>
-
-    <h3>Economics and general interest</h3>
-
-    <div class="paper">
-        <p class="paper-title">The impact of retirement on loneliness in Europe</p>
-        <p class="paper-info">with Sophie Guthmuller, Dörte Heger and Anna Werbeck</p>
-        <p><i>Scientific Reports</i>, forthcoming - <a
-                href="https://www.rwi-essen.de/fileadmin/user_upload/RWI/Publikationen/Ruhr_Economic_Papers/REP_23_1048.pdf">WP
-                version</a></p>
-        <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
-        <div class="abstract">
-            [Abstract text goes here. Please add the abstract if available.]
-        </div>
-    </div>
-
-    <h3>Health policy</h3>
-
-    <div class="paper">
-        <p class="paper-title"><a href="https://www.sciencedirect.com/science/article/pii/S2211883724000674">A
-                nationwide digital maturity assessment of hospitals: Results from the German DigitalRadar</a></p>
-        <p class="paper-info">with Alexander Geissler, Malte Haring, Volker Amelung, Sylvia Thun and Alexander Haering
-        </p>
-        <p><i>Health Policy and Technology</i>, 2024, Vol. 13(4)</p>
-        <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
-        <div class="abstract">
-            [Abstract text goes here. Please add the abstract if available.]
-        </div>
-    </div>
-
-    <div class="paper">
-        <p class="paper-title"><a href="https://www.sciencedirect.com/science/article/pii/S0168851024000228">The
-                association of hospital profitability and digital maturity – An explorative study using data from the
-                German DigitalRadar project</a></p>
-        <p class="paper-info">with Justus Vogel, Alexander Haering, Boris Augurzky and Alexander Geissler</p>
-        <p><i>Health Policy</i>, 2024, Vol. 142</p>
-        <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
-        <div class="abstract">
-            [Abstract text goes here. Please add the abstract if available.]
-        </div>
-    </div>
-
-    <h3>Other writing</h3>
-    <p>I was co-author of several <a href="https://www.medhochzwei-verlag.de/Verlag/Autoren/Detail/114112">Hospital and
-            Nursing Home Rating Reports</a> (in German) where I calculate default probabilities for the majority of
-        German hospitals / nursing homes using financial statement data.</p>
-
-    <script>
-        function toggleAbstract(element) {
-            var abstract = element.nextElementSibling;
-            if (abstract.style.display === "none" || abstract.style.display === "") {
-                abstract.style.display = "block";
-                element.textContent = "- Abstract";
-            } else {
-                abstract.style.display = "none";
-                element.textContent = "+ Abstract";
-            }
-        }
-    </script>
-</body>
-
-</html>
+<h2>Other writing</h2>
+<p>I was co-author of several <a href="https://www.medhochzwei-verlag.de/Verlag/Autoren/Detail/114112">Hospital and
+        Nursing Home Rating Reports</a> (in German) where I calculate default probabilities for the majority of German
+    hospitals / nursing homes using financial statement data.</p>
