--- a/_pages/research.html
+++ b/_pages/research.html
@@ -14,6 +14,19 @@ redirect_from:
     with Hendrik Schmitz and Matthias Westphal<br>
     <i>Ruhr Economic Papers</i> #1105
 </p>
+<p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
+<div class="abstract">
+    We show that two-stage least squares (2SLS) estimates of interactions can be misleading in settings with
+    essential heterogeneity (e.g., selection into gains) and where complier status to the instrument depends on
+    the interaction variable. The 2SLS estimator cannot disentangle interaction effects from shifts in complier
+    groups. Estimating marginal treatment effects addresses this problem by fixing the underlying population
+    and unobserved heterogeneity. We illustrate this using the example of gene-environment studies, where the
+    central parameter is the interaction effect between an endogenous, instrumented measure of environment
+    or behavior and a predetermined measure of genetic endowment. Our application examines the effect of
+    education on cognitive performance in old age. The results show complementarities between education and
+    genetic predisposition in determining cognitive abilities. The marginal treatment effect estimates reveal a
+    substantially larger gene-environment interaction, exceeding the 2SLS estimate by a factor of at least 2.5.
+</div>
 
 <p><strong>Life-cycle Health Effects of Compulsory Schooling</strong><br>
     with Hendrik Schmitz and Beatrice Baaba Tawiah<br>
