--- a/_pages/research.html
+++ b/_pages/research.html
@@ -5,6 +5,9 @@ redirect_from:
 - /research
 ---
 
+<!DOCTYPE html>
+<html lang="en">
+
 {% include base_path %}
 
 <h1>Works in progress</h1>
@@ -14,7 +17,6 @@ redirect_from:
     <i>Ruhr Economic Papers</i> #1105
 </p>
 
-<!-- HTML for the abstract toggle -->
 <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
 <div class="abstract" style="display:none;">
     We show that two-stage least squares (2SLS) estimates of interactions can be misleading in settings with
