--- a/_pages/research.html
+++ b/_pages/research.html
@@ -10,7 +10,7 @@ redirect_from:
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <style>
         body {
             /* font-family: Arial, sans-serif; */
@@ -67,8 +67,6 @@ redirect_from:
 </head>
 
 <body>
-    <h1>Research</h1>
-
     <h2>Works in progress</h2>
 
     <div class="paper">
