--- a/_pages/research.html
+++ b/_pages/research.html
@@ -10,7 +10,7 @@ redirect_from:
 
 <head>
     <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
             /* font-family: Arial, sans-serif; */
@@ -72,12 +72,12 @@ redirect_from:
     <div class="paper">
         <p class="paper-title"><a
                 href="https://www.rwi-essen.de/fileadmin/user_upload/RWI/Publikationen/Ruhr_Economic_Papers/REP_24_1105.pdf">Gene-environment
-                interactions with essential heterogeneity</a> (September 2024)</p>
+                interactions with essential heterogeneity</a></p>
         <p class="paper-info">with Hendrik Schmitz and Matthias Westphal</p>
-        <p><i>Ruhr Economic Papers</i> #1105</p>
+        <p><i>Ruhr Economic Papers</i> #1105 (September 2024)</p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
         <div class="abstract">
-            [We show that two-stage least squares (2SLS) estimates of interactions can be misleading in settings with
+            We show that two-stage least squares (2SLS) estimates of interactions can be misleading in settings with
             essential heterogeneity (e.g., selection into gains) and where complier status to the instrument depends on
             the interaction variable. The 2SLS estimator cannot disentangle interaction effects from shifts in complier
             groups. Estimating marginal treatment effects addresses this problem by fixing the underlying population
@@ -86,7 +86,7 @@ redirect_from:
             or behavior and a predetermined measure of genetic endowment. Our application examines the effect of
             education on cognitive performance in old age. The results show complementarities between education and
             genetic predisposition in determining cognitive abilities. The marginal treatment effect estimates reveal a
-            substantially larger gene-environment interaction, exceeding the 2SLS estimate by a factor of at least 2.5.]
+            substantially larger gene-environment interaction, exceeding the 2SLS estimate by a factor of at least 2.5.
         </div>
     </div>
 
