--- a/_pages/research.html
+++ b/_pages/research.html
@@ -94,10 +94,10 @@ redirect_from:
         <p class="paper-title">Life-cycle Health Effects of Compulsory Schooling</p>
         <p class="paper-info">with Hendrik Schmitz and Beatrice Baaba Tawiah</p>
         <p>In preparation</p>
-        <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
+        <!-- <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
         <div class="abstract">
             [Abstract text goes here. Please add the abstract if available.]
-        </div>
+        </div> -->
     </div>
 
     <h2>Published and accepted work</h2>
@@ -112,7 +112,17 @@ redirect_from:
                 version</a></p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
         <div class="abstract">
-            [Abstract text goes here. Please add the abstract if available.]
+            We investigate the short- and long-term effects of retirement on loneliness using panel data
+            from the Survey of Health, Aging, and Retirement in Europe. To estimate causal effects, we
+            exploit differences in retirement eligibility rules across and within countries and use retirement
+            thresholds in an instrumental variable setting. On average, we find that entering retirement leads
+            to a significant reduction in loneliness in the long run, although our results show no clear effect
+            in the short run. The reduction is driven by individuals being less likely to feel socially isolated
+            and lacking companionship. Our results suggest that individuals adapt to retirement by increasing
+            their activity levels and reap the benefits in terms of reduced loneliness and social isolation.
+            Heterogeneity analysis by gender reveals that retirement increases feelings of loneliness for women
+            in the short term, and that this effect appears to be driven by women lacking companionship
+            when their partner is not yet retired.
         </div>
     </div>
 
@@ -126,7 +136,28 @@ redirect_from:
         <p><i>Health Policy and Technology</i>, 2024, Vol. 13(4)</p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
         <div class="abstract">
-            [Abstract text goes here. Please add the abstract if available.]
+            In 2019, the German government established the Hospital Future Fund, allocating 4.3 billion Euros, to
+            support investments in the digital infrastructure of hospitals. The DigitalRadar consortium was commissioned
+            by the German Ministry of Health in 2020 to develop a holistic digital maturity model and evaluate the
+            current state of digitalization and the impact of the funding program. To date, the nationwide
+            digitalization of German hospitals has remained a relatively understudied phenomenon. This study aims to
+            address this gap in knowledge by examining the influence of various factors identified by the DigitalRadar
+            maturity model on the digital maturity of hospitals in Germany. In doing so, it seeks to elucidate the
+            implications these findings have for the development of a digital, patient-centred, safe, and high-quality
+            hospital landscape in the country.
+            The model was developed through a scoping review of digital maturity models, requirements set forth in the
+            Hospital Future Act, analysis of components from existing models and feedback from a sounding board.
+            Ultimately, the model includes 234 questions (items) categorized into 7 dimensions of digitalization. It was
+            piloted in 12 hospitals and revised accordingly. 1,624 hospitals (91% of all German hospitals) participated
+            in this self-assessment, as participation was mandatory to receive funding.
+            The average DigitalRadar score on a 100-point scale is 33. Maturity is comparatively high in the structures
+            and systems dimension, but low in the clinical processes, exchange of information, telemedicine and patient
+            participation dimensions, suggesting that data exchange is hampered by a lack of interoperability. Drivers
+            of digital maturity are teaching status, size, connectivity, and level of emergency services.
+            The transparency gained allows hospitals and regulators to identify areas for improvement and develop
+            digital strategies. Additionally, it enables researchers to analyse, for example, the correlation between
+            digitalization and the quality of care, as well as the mechanisms of action of large-scale funding programs
+            for hospital digitization.
         </div>
     </div>
 
@@ -138,12 +169,28 @@ redirect_from:
         <p><i>Health Policy</i>, 2024, Vol. 142</p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
         <div class="abstract">
-            [Abstract text goes here. Please add the abstract if available.]
+            German hospitals largely rely on public investments for digitization. As these have been insufficient,
+            hospitals had to use own profits to foster digital transformation. Thus, we assess if profitability affects
+            digital maturity, and what other factors might be influential.
+            We use digital maturity data from the DigitalRadar (DR) project (2021) and financial statement data from the
+            Hospital Rating Report from 2017 to 2019 (n = 860). We run linear regressions with the DR-score (continuous
+            variable from 0 to 100) as dependent and three-year average EBITDA margin as independent variable. Besides,
+            we conduct subgroup analyses stratifying by chain size.
+            A one percentage point EBITDA margin increase is associated with a 0.359 points DR-score increase.
+            This relationship holds in significance and holds or increases in magnitude for all specifications
+            except when adding chain beds (0.212 point DR-score increase). Besides, chain membership and
+            chain size are positively and significantly associated with hospitals’ DR-score. EBITDA margins of the
+            subgroups “large chains” and “Big 3″, i.e., the three largest chains, were strongly associated with the
+            DR-score (2.685 and 3.197 points DR-score increase respectively). Conclusions Higher
+            profitability is associated with higher digital maturity. Larger chains are digitally more mature,
+            because (1) they might follow a chain-wide IT-strategy, (2) can standardize IT-architecture, and
+            policies and (3) might cross-finance investments.
         </div>
     </div>
 
     <h3>Other writing</h3>
-    <p>I was co-author of several <a href="https://www.medhochzwei-verlag.de/Verlag/Autoren/Detail/114112">Hospital and
+    <p>I was co-author of several <a href="https://www.medhochzwei-verlag.de/Verlag/Autoren/Detail/114112">Hospital
+            and
             Nursing Home Rating Reports</a> (in German) where I calculate default probabilities for the majority of
         German hospitals / nursing homes using financial statement data.</p>
 
