--- a/_pages/research.html
+++ b/_pages/research.html
@@ -29,7 +29,7 @@ redirect_from:
         h2 {
             font-size: 1.5em;
             color: #000;
-            margin-top: 30px;
+            /* margin-top: 30px; */
         }
 
         h3 {
@@ -46,7 +46,6 @@ redirect_from:
         }
 
         .paper-info {
-            font-style: italic;
             color: #666;
         }
 
