--- a/_pages/research.html
+++ b/_pages/research.html
@@ -18,7 +18,7 @@ redirect_from:
             color: #333;
             /* max-width: 800px; */
             margin: 0 auto;
-            padding: 20px;
+            /* padding: 20px; */
         }
 
         h1 {
@@ -46,7 +46,7 @@ redirect_from:
         }
 
         .paper-info {
-            color: #666;
+            color: #000;
         }
 
         .abstract-toggle {
