--- a/_pages/research.html
+++ b/_pages/research.html
@@ -22,12 +22,12 @@ redirect_from:
         }
 
         h1 {
-            font-size: 2em;
+            font-size: 1.5em;
             color: #000;
         }
 
         h2 {
-            font-size: 1.5em;
+            font-size: 1.2em;
             color: #000;
             /* margin-top: 30px; */
         }
@@ -38,6 +38,8 @@ redirect_from:
         }
 
         .paper {
+            margin: 5px 0;
+            padding: 0;
             margin-bottom: 20px;
         }
 
@@ -66,7 +68,7 @@ redirect_from:
 </head>
 
 <body>
-    <h2>Works in progress</h2>
+    <h1>Works in progress</h1>
 
     <div class="paper">
         <p class="paper-title"><a
@@ -99,9 +101,9 @@ redirect_from:
         </div> -->
     </div>
 
-    <h2>Published and accepted work</h2>
+    <h1>Published and accepted work</h1>
 
-    <h3>Economics and general interest</h3>
+    <h2>Economics and general interest</h2>
 
     <div class="paper">
         <p class="paper-title">The impact of retirement on loneliness in Europe</p>
@@ -125,7 +127,7 @@ redirect_from:
         </div>
     </div>
 
-    <h3>Health policy</h3>
+    <h2>Health policy</h2>
 
     <div class="paper">
         <p class="paper-title"><a href="https://www.sciencedirect.com/science/article/pii/S2211883724000674">A
@@ -187,7 +189,7 @@ redirect_from:
         </div>
     </div>
 
-    <h3>Other writing</h3>
+    <h2>Other writing</h2>
     <p>I was co-author of several <a href="https://www.medhochzwei-verlag.de/Verlag/Autoren/Detail/114112">Hospital
             and
             Nursing Home Rating Reports</a> (in German) where I calculate default probabilities for the majority of
