--- a/_pages/research.html
+++ b/_pages/research.html
@@ -38,7 +38,7 @@ redirect_from:
         }
 
         .paper {
-            margin: 5px 0;
+            margin: 0 0;
             padding: 0;
             margin-bottom: 20px;
         }
