--- a/_pages/research.html
+++ b/_pages/research.html
@@ -17,7 +17,7 @@ redirect_from:
             /* line-height: 1.6; */
             color: #333;
             /* max-width: 800px; */
-            margin: 0 auto;
+            margin: 0;
             /* padding: 20px; */
         }
 
@@ -33,7 +33,7 @@ redirect_from:
         }
 
         .paper {
-            margin: 0 0;
+            margin: 0;
             padding: 0;
             margin-bottom: 20px;
         }
