--- a/_pages/research.html
+++ b/_pages/research.html
@@ -28,6 +28,7 @@ redirect_from:
 
         h2 {
             font-size: 1em;
+            margin: 0;
             color: #666;
             /* margin-top: 30px; */
         }
@@ -35,7 +36,7 @@ redirect_from:
         .paper {
             margin: 0;
             padding: 0;
-            margin-bottom: 20px;
+            /* margin-bottom: 20px; */
         }
 
         .paper-title {
