--- a/_pages/research.html
+++ b/_pages/research.html
@@ -22,15 +22,15 @@ redirect_from:
         }
 
         h1 {
-            font-size: 1.5em;
+            font-size: 1.4em;
             color: #000;
         }
 
         h2 {
-            font-size: 1em;
+            font-size: 1.2em;
             margin: 0;
             color: #666;
-            /* margin-top: 30px; */
+            margin-bottom: 20px;
         }
 
         .paper {
@@ -41,10 +41,14 @@ redirect_from:
 
         .paper-title {
             font-weight: bold;
+            margin: 0;
+            padding: 0;
         }
 
         .paper-info {
             color: #000;
+            margin: 0;
+            padding: 0;
         }
 
         .abstract-toggle {
