--- a/_pages/research.html
+++ b/_pages/research.html
@@ -39,6 +39,12 @@ redirect_from:
             /* margin-bottom: 20px; */
         }
 
+        .paper p {
+            margin: 0;
+            padding: 0;
+            /* margin-bottom: 20px; */
+        }
+
         .paper-title {
             font-weight: bold;
             margin: 0;
