--- a/_pages/research.html
+++ b/_pages/research.html
@@ -22,8 +22,9 @@ redirect_from:
         }
 
         h1 {
-            font-size: 1.4em;
+            font-size: 1.3em;
             color: #000;
+            margin-top: 10px;
         }
 
         h2 {
@@ -34,9 +35,7 @@ redirect_from:
         }
 
         .paper {
-            margin: 0;
-            padding: 0;
-            /* margin-bottom: 20px; */
+            margin-bottom: 20px;
         }
 
         .paper p {
