--- a/_pages/research.html
+++ b/_pages/research.html
@@ -28,10 +28,11 @@ redirect_from:
         }
 
         h2 {
-            font-size: 1.2em;
+            font-size: 1.1em;
             margin: 0;
             color: #666;
             margin-bottom: 20px;
+            margin-top: 10px;
         }
 
         .paper {
