--- a/_pages/research.html
+++ b/_pages/research.html
@@ -25,6 +25,7 @@ redirect_from:
             font-size: 1.3em;
             color: #000;
             margin-top: 10px;
+            margin-bottom: 20px;
         }
 
         h2 {
