--- a/_pages/research.html
+++ b/_pages/research.html
@@ -70,6 +70,7 @@ redirect_from:
             padding: 10px;
             border-left: 3px solid #000;
             margin-top: 10px;
+            text-align: justify;
         }
     </style>
 </head>
