--- a/_pages/research.html
+++ b/_pages/research.html
@@ -15,7 +15,7 @@ redirect_from:
         body {
             /* font-family: Arial, sans-serif; */
             /* line-height: 1.6; */
-            color: #333;
+            /* color: #333; */
             /* max-width: 800px; */
             margin: 0;
             /* padding: 20px; */
@@ -23,7 +23,7 @@ redirect_from:
 
         h1 {
             font-size: 1.3em;
-            color: #000;
+            /* color: #000; */
             margin-top: 20px;
             margin-bottom: 20px;
         }
@@ -31,7 +31,7 @@ redirect_from:
         h2 {
             font-size: 1.1em;
             margin: 0;
-            color: #666;
+            /* color: #666; */
             margin-bottom: 20px;
             margin-top: 20px;
         }
@@ -60,8 +60,7 @@ redirect_from:
 
         .abstract-toggle {
             cursor: pointer;
-            color: #000;
-            font-weight: bold;
+            /* color: #000; */
         }
 
         .abstract {
