--- a/_pages/research.html
+++ b/_pages/research.html
@@ -70,6 +70,7 @@ redirect_from:
             border-left: 3px solid #000;
             margin-top: 10px;
             text-align: justify;
+            font-size: 0.9em;
         }
     </style>
 </head>
