changed linter rules

--- a/_pages/research.html
+++ b/_pages/research.html
@@ -24,7 +24,7 @@ redirect_from:
         h1 {
             font-size: 1.3em;
             /* color: #000; */
-            margin-top: 20px;
+            margin-top: 40px;
             margin-bottom: 20px;
         }
 
@@ -76,7 +76,7 @@ redirect_from:
 </head>
 
 <body>
-    <h1>Works in progress</h1>
+    <h1>Work in progress</h1>
 
     <div class="paper">
         <p class="paper-title"><a
@@ -109,7 +109,7 @@ redirect_from:
         </div> -->
     </div>
 
-    <h1>Published and accepted work</h1>
+    <h1>Journal Articles</h1>
 
     <h2>Economics and general interest</h2>
 
@@ -197,7 +197,7 @@ redirect_from:
         </div>
     </div>
 
-    <h2>Other writing</h2>
+    <h1>Other writing</h1>
     <p>I was co-author of several <a href="https://www.medhochzwei-verlag.de/Verlag/Autoren/Detail/114112">Hospital
             and
             Nursing Home Rating Reports</a> (in German) where I calculate default probabilities for the majority of
