--- a/_pages/research.html
+++ b/_pages/research.html
@@ -33,7 +33,7 @@ redirect_from:
             margin: 0;
             /* color: #666; */
             margin-bottom: 20px;
-            margin-top: 20px;
+            margin-top: 30px;
         }
 
         .paper {
@@ -53,7 +53,7 @@ redirect_from:
         }
 
         .paper-info {
-            color: #000;
+            /* color: #000; */
             margin: 0;
             padding: 0;
         }
@@ -201,7 +201,7 @@ redirect_from:
     <p>I was co-author of several <a href="https://www.medhochzwei-verlag.de/Verlag/Autoren/Detail/114112">Hospital
             and
             Nursing Home Rating Reports</a> (in German) where I calculate default probabilities for the majority of
-        German hospitals / nursing homes using financial statement data.</p>
+        German hospitals and nursing homes using financial statement data.</p>
 
     <script>
         function toggleAbstract(element) {
