--- a/_pages/research.html
+++ b/_pages/research.html
@@ -76,7 +76,7 @@ redirect_from:
 </head>
 
 <body>
-    <h1>Work in progress</h1>
+    <h1 style="margin-top: 0;">Work in progress</h1>
 
     <div class="paper">
         <p class="paper-title"><a
