--- a/_pages/research.html
+++ b/_pages/research.html
@@ -121,17 +121,7 @@ redirect_from:
                 version</a></p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
         <div class="abstract">
-            We investigate the short- and long-term effects of retirement on loneliness using panel data
-            from the Survey of Health, Aging, and Retirement in Europe. To estimate causal effects, we
-            exploit differences in retirement eligibility rules across and within countries and use retirement
-            thresholds in an instrumental variable setting. On average, we find that entering retirement leads
-            to a significant reduction in loneliness in the long run, although our results show no clear effect
-            in the short run. The reduction is driven by individuals being less likely to feel socially isolated
-            and lacking companionship. Our results suggest that individuals adapt to retirement by increasing
-            their activity levels and reap the benefits in terms of reduced loneliness and social isolation.
-            Heterogeneity analysis by gender reveals that retirement increases feelings of loneliness for women
-            in the short term, and that this effect appears to be driven by women lacking companionship
-            when their partner is not yet retired.
+            This article investigates the short- and long-term impacts of retirement on loneliness using panel data from the Survey of Health, Aging, and Retirement in Europe. To identify causal effects, we exploit differences in retirement rules across and within countries and use retirement thresholds in an instrumental variable setting. On average, we find that entering retirement leads to a reduction in loneliness in the long run and no clear effect in the short run. The reduction is driven by individuals being less likely to feel socially isolated and lacking companionship. Our results suggest that individuals adapt to retirement by increasing their activity levels and reap the benefits in terms of reduced loneliness and social isolation. The heterogeneity analysis shows that this is particularly true among the higher educated. The heterogeneity analysis also reveals that retirement increases feelings of loneliness for women in the short term and that the effect seems to be driven by women lacking companionship when their partner is not yet retired.
         </div>
     </div>
 
