--- a/_pages/research.html
+++ b/_pages/research.html
@@ -76,12 +76,12 @@ redirect_from:
 </head>
 
 <body>
-    <h1 style="margin-top: 0;">Work in progress</h1>
+    <h1 style="margin-top: 0;">Work in Progress</h1>
 
     <div class="paper">
         <p class="paper-title"><a
-                href="https://www.rwi-essen.de/fileadmin/user_upload/RWI/Publikationen/Ruhr_Economic_Papers/REP_24_1105.pdf">Gene-environment
-                interactions with essential heterogeneity</a></p>
+                href="https://www.rwi-essen.de/fileadmin/user_upload/RWI/Publikationen/Ruhr_Economic_Papers/REP_24_1105.pdf">Gene-Environment
+                Interactions with Essential Heterogeneity</a></p>
         <p class="paper-info">with Hendrik Schmitz and Matthias Westphal</p>
         <p><i>Ruhr Economic Papers</i> #1105 (September 2024)</p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
@@ -111,7 +111,7 @@ redirect_from:
 
     <h1>Journal Articles</h1>
 
-    <h2>Economics and general interest</h2>
+    <h2>Economics and General Interest</h2>
 
     <div class="paper">
         <p class="paper-title">The impact of retirement on loneliness in Europe</p>
@@ -121,11 +121,20 @@ redirect_from:
                 version</a></p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
         <div class="abstract">
-            This article investigates the short- and long-term impacts of retirement on loneliness using panel data from the Survey of Health, Aging, and Retirement in Europe. To identify causal effects, we exploit differences in retirement rules across and within countries and use retirement thresholds in an instrumental variable setting. On average, we find that entering retirement leads to a reduction in loneliness in the long run and no clear effect in the short run. The reduction is driven by individuals being less likely to feel socially isolated and lacking companionship. Our results suggest that individuals adapt to retirement by increasing their activity levels and reap the benefits in terms of reduced loneliness and social isolation. The heterogeneity analysis shows that this is particularly true among the higher educated. The heterogeneity analysis also reveals that retirement increases feelings of loneliness for women in the short term and that the effect seems to be driven by women lacking companionship when their partner is not yet retired.
+            This article investigates the short- and long-term impacts of retirement on loneliness using panel data from
+            the Survey of Health, Aging, and Retirement in Europe. To identify causal effects, we exploit differences in
+            retirement rules across and within countries and use retirement thresholds in an instrumental variable
+            setting. On average, we find that entering retirement leads to a reduction in loneliness in the long run and
+            no clear effect in the short run. The reduction is driven by individuals being less likely to feel socially
+            isolated and lacking companionship. Our results suggest that individuals adapt to retirement by increasing
+            their activity levels and reap the benefits in terms of reduced loneliness and social isolation. The
+            heterogeneity analysis shows that this is particularly true among the higher educated. The heterogeneity
+            analysis also reveals that retirement increases feelings of loneliness for women in the short term and that
+            the effect seems to be driven by women lacking companionship when their partner is not yet retired.
         </div>
     </div>
 
-    <h2>Health policy</h2>
+    <h2>Health Policy</h2>
 
     <div class="paper">
         <p class="paper-title"><a href="https://www.sciencedirect.com/science/article/pii/S2211883724000674">A
@@ -187,7 +196,7 @@ redirect_from:
         </div>
     </div>
 
-    <h1>Other writing</h1>
+    <h1>Other Writing</h1>
     <p>I was co-author of several <a href="https://www.medhochzwei-verlag.de/Verlag/Autoren/Detail/114112">Hospital
             and
             Nursing Home Rating Reports</a> (in German) where I calculate default probabilities for the majority of
