--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,13 +5,31 @@ redirect_from:
 - /teaching
 ---
 
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Teaching and Supervision</title>
+    <style>
+        body {
+            font-size: 14px;
+            /* Adjust the base font size for all text */
+        }
+
+        h2 {
+            font-size: 18px;
+            /* Smaller size for headers */
+            margin-top: 20px;
+        }
+
+        p {
+            font-size: 12px;
+            /* Smaller size for paragraphs */
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 
 <body>
@@ -20,11 +38,11 @@ redirect_from:
         at Paderborn University.</p>
 
     <h2>At Paderborn University</h2>
-    <p>Microeconometrics (graduate) &nbsp;&nbsp;&nbsp; Teaching assistant, Summer 2024 </p>
+    <p>Microeconometrics (graduate) &nbsp;&nbsp;&nbsp; Teaching assistant, Summer 2024</p>
     <p>Empirical Economics (undergrad) &nbsp;&nbsp;&nbsp; Teaching assistant, Summer 2024</p>
 
     <h2>At University of Duisburg-Essen</h2>
-    <p>Health Care Systems (graduate) &nbsp;&nbsp;&nbsp; Teaching assistant, Summer 2024 </p>
+    <p>Health Care Systems (graduate) &nbsp;&nbsp;&nbsp; Teaching assistant, Summer 2024</p>
 
     <h2>Supervision</h2>
     <p>So far, I've supervised two empirical Master theses in health economics.</p>
