--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -34,8 +34,8 @@ redirect_from:
 
 <body>
 
-    <p>In summer 2025, I'll be TA for Microeconometrics (graduate) and Statistics for Industrial Engineers (undergrad)
-        at Paderborn University.</p>
+    <p>In summer 2025, I'll be TA for Microeconometrics (graduate) and Applied Statistics for Industrial Engineering
+        (undergrad) at Paderborn University.</p>
 
     <h2>At Paderborn University</h2>
     <p>Microeconometrics (graduate) &nbsp;&nbsp;&nbsp; Teaching assistant, Summer 2024</p>
