--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,5 +1,6 @@
 ---
 permalink: /teaching/
+title: "Teaching and Supervision"
 author_profile: true
 redirect_from:
 - /teaching
@@ -24,9 +25,10 @@ redirect_from:
             margin-top: 20px;
         }
 
-        p {
+        p,
+        li {
             font-size: 12px;
-            /* Smaller size for paragraphs */
+            /* Smaller size for paragraphs and list items */
             margin-bottom: 10px;
         }
     </style>
@@ -37,15 +39,15 @@ redirect_from:
     <p>In summer 2025, I'll be TA for Microeconometrics (graduate) and Applied Statistics for Industrial Engineering
         (undergrad) at Paderborn University.</p>
 
-    <h2>At Paderborn University</h2>
-    <p>Microeconometrics (graduate) &nbsp;&nbsp;&nbsp; Teaching assistant, Summer 2024</p>
-    <p>Empirical Economics (undergrad) &nbsp;&nbsp;&nbsp; Teaching assistant, Summer 2024</p>
-
-    <h2>At University of Duisburg-Essen</h2>
-    <p>Health Care Systems (graduate) &nbsp;&nbsp;&nbsp; Teaching assistant, Summer 2024</p>
+    <h2>Teaching Assistance</h2>
+    <ul>
+        <li>Microeconometrics (graduate), Paderborn University, Summer 2024</li>
+        <li>Empirical Economics (undergrad), Paderborn University, Summer 2024</li>
+        <li>Health Care Systems (graduate), University of Duisburg-Essen, Summer 2024</li>
+    </ul>
 
     <h2>Supervision</h2>
-    <p>So far, I've supervised two empirical Master theses in health economics.</p>
+    <p>So far, I've supervised two empirical Master theses in health economics at Paderborn University.</p>
 
 </body>
 
