--- a/_pages/research.html
+++ b/_pages/research.html
@@ -114,11 +114,10 @@ redirect_from:
     <h2>Economics and General Interest</h2>
 
     <div class="paper">
-        <p class="paper-title">The impact of retirement on loneliness in Europe</p>
+        <p class="paper-title"><a href="https://www.nature.com/articles/s41598-024-74692-y"></a>The impact of retirement
+            on loneliness in Europe</p>
         <p class="paper-info">with Sophie Guthmuller, Dörte Heger and Anna Werbeck</p>
-        <p><i>Scientific Reports</i>, forthcoming - <a
-                href="https://www.rwi-essen.de/fileadmin/user_upload/RWI/Publikationen/Ruhr_Economic_Papers/REP_23_1048.pdf">WP
-                version</a></p>
+        <p><i>Scientific Reports</i>, forthcoming</p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
         <div class="abstract">
             This article investigates the short- and long-term impacts of retirement on loneliness using panel data from
