--- a/_pages/research.html
+++ b/_pages/research.html
@@ -114,8 +114,9 @@ redirect_from:
     <h2>Economics and General Interest</h2>
 
     <div class="paper">
-        <p class="paper-title"><a href="https://www.nature.com/articles/s41598-024-74692-y"></a>The impact of retirement
-            on loneliness in Europe</p>
+        <p class="paper-title"><a>
+                href="https://www.nature.com/articles/s41598-024-74692-y">The impact of retirement
+                on loneliness in Europe</a></p>
         <p class="paper-info">with Sophie Guthmuller, Dörte Heger and Anna Werbeck</p>
         <p><i>Scientific Reports</i>, forthcoming</p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
