--- a/_pages/research.html
+++ b/_pages/research.html
@@ -117,7 +117,7 @@ redirect_from:
         <p class="paper-title"><a href="https://www.nature.com/articles/s41598-024-74692-y">The impact of retirement
                 on loneliness in Europe</a></p>
         <p class="paper-info">with Sophie Guthmuller, Dörte Heger and Anna Werbeck</p>
-        <p><i>Scientific Reports</i>, forthcoming</p>
+        <p><i>Scientific Reports</i>, 2024, Vol. 14, Article number: 26971</p>
         <p class="abstract-toggle" onclick="toggleAbstract(this)">+ Abstract</p>
         <div class="abstract">
             This article investigates the short- and long-term impacts of retirement on loneliness using panel data from
